Add option to hide inventory from unauthorized players